--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "pg": "^7.4.1",
+    "reniec-sunat-js": "^1.0.0",
+    "request": "^2.85.0"
   }
 }
